[gd_scene load_steps=24 format=2]

[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Sprites/A.png" type="Texture" id=4]
[ext_resource path="res://Icons/BackWhiteSquare.png" type="Texture" id=5]
[ext_resource path="res://Icons/PlayWhiteSquare.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
resource_local_to_scene = true
font_path = "res://Fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Message:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 64 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Message:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Message:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 64, 128, 64 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Message:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=6]
size = 40
outline_color = Color( 0.623529, 0.447059, 0.0196078, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.188235, 0.266667, 0.533333, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=9]
size = 64
outline_color = Color( 0.0980392, 0.772549, 0.156863, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=11]
flags = 4
load_path = "res://.import/A_no_hat.png-3669523387eee9d6332be96da418e3a9.stex"

[sub_resource type="StreamTexture" id=12]
flags = 4
load_path = "res://.import/B_no_hat.png-875d201782c18d9c2c9ba01a5c0e5962.stex"

[sub_resource type="StreamTexture" id=13]
flags = 4
load_path = "res://.import/C_no_hat.png-9a8d133be06e4dc792711d298106f12c.stex"

[sub_resource type="StreamTexture" id=14]
flags = 4
load_path = "res://.import/D_no_hat.png-3d1a9028acdc17a22f8171456e3f066a.stex"

[sub_resource type="StreamTexture" id=15]
flags = 4
load_path = "res://.import/E_no_hat2.png-5ac3de0c559699dc44534de8382848e7.stex"

[sub_resource type="StreamTexture" id=16]
flags = 4
load_path = "res://.import/F no hat 2.png-580a6a9635918993511cd7b0bb496195.stex"

[sub_resource type="StreamTexture" id=17]
flags = 4
load_path = "res://.import/G_no_hat.png-51d8925ca610c99992719aaaed07ee18.stex"

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
visible = false
margin_left = 700.0
margin_top = 350.0
margin_right = 1082.0
margin_bottom = 505.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.635294, 0.0117647, 1 )
text = "Game Over!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/init = SubResource( 3 )
anims/show_message() = SubResource( 4 )

[node name="ScoreBox" type="VBoxContainer" parent="."]
margin_left = 1480.0
margin_top = 820.0
margin_right = 1880.0
margin_bottom = 948.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLbl" type="Label" parent="ScoreBox"]
margin_right = 400.0
margin_bottom = 48.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 6 )
text = "Score "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ScoreBox"]
margin_top = 52.0
margin_right = 400.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 7 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StreakLabel" type="Label" parent="."]
visible = false
margin_left = 722.0
margin_top = 205.0
margin_right = 1117.0
margin_bottom = 360.0
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.0980392, 0.772549, 0.156863, 1 )
text = "Streak bonus:
10 points!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CopyrightLabel" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 1040.0
margin_right = 672.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.705882, 0.705882, 0.705882, 1 )
text = "Copyright 2020 Attune Music and Math, LLC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LivesBox" type="MarginContainer" parent="."]
anchor_top = 0.94
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 450.0
margin_right = 4.00006
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life9" type="Sprite" parent="LivesBox"]
visible = false
position = Vector2( 943, -4 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 4 )

[node name="Life" type="Sprite" parent="LivesBox"]
position = Vector2( 943, -5 )
scale = Vector2( 0.16, 0.16 )
texture = SubResource( 11 )

[node name="Life2" type="Sprite" parent="LivesBox"]
position = Vector2( 1025, -5 )
scale = Vector2( 0.16, 0.16 )
texture = SubResource( 12 )

[node name="Life3" type="Sprite" parent="LivesBox"]
position = Vector2( 1101, -5 )
scale = Vector2( 0.16, 0.16 )
texture = SubResource( 13 )

[node name="Life4" type="Sprite" parent="LivesBox"]
position = Vector2( 1170, -5 )
scale = Vector2( 0.16, 0.16 )
texture = SubResource( 14 )

[node name="Life5" type="Sprite" parent="LivesBox"]
position = Vector2( 1245, -5 )
scale = Vector2( 0.16, 0.16 )
texture = SubResource( 15 )

[node name="Life6" type="Sprite" parent="LivesBox"]
position = Vector2( 1317, -5 )
scale = Vector2( 0.16, 0.16 )
texture = SubResource( 16 )

[node name="Life7" type="Sprite" parent="LivesBox"]
position = Vector2( 1390, -5 )
scale = Vector2( 0.1, 0.1 )
texture = SubResource( 17 )

[node name="InstructionsLabel" type="Label" parent="."]
margin_left = 157.172
margin_top = 13.2304
margin_right = 1497.17
margin_bottom = 136.23
custom_fonts/font = SubResource( 18 )
text = "Adjust the settings below, then click \"Start\" to begin playing.
Or, tap the keys to make up your own song."
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = 1800.0
margin_top = 25.0
margin_right = 1914.0
margin_bottom = 175.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 139.0
margin_bottom = 175.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
